--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a class="item">
                 <div class="info">
                     <h1>gRoot</h1>
+                    <p>For when you need a friend with root access.</p>
                 </div>
             </a>
             <a class="item"></a>
