add tictactoe content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="title">SDSLabs Financial Year 2018-19 Showcase</div>
         <div class="content">
-            <a class="item">
+            <a class="item" id="gRoot" href="https://github.com/sdslabs/gRoot/blob/master">
                 <div class="info">
                     <h1>gRoot</h1>
                     <p>For when you need a friend with root access.</p>
