add tictactoe content

--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
     <div class="container">
         <div class="title">SDSLabs Financial Year 2018-19 Showcase</div>
         <div class="content">
-            <a class="item" id="gRoot" href="https://github.com/sdslabs/gRoot/blob/master">
+            <a class="item" id="gRoot" href="https://github.com/sdslabs/gRoot" target="_blank">
                 <div class="info">
                     <h1>gRoot</h1>
                     <p>For when you need a friend with root access.</p>
                 </div>
             </a>
-            <a class="item"></a>
+            <a class="item" id="tictactoe" href="#" target="_blank">
+                <div class="info">
+                    <h1>Brutal Tic-Tac-Toe</h1>
+                    <p>You're dreaming if you think you can even draw. Go on and give it a try!</p>
+                </div>
+            </a>
             <a class="item"></a>
             <a class="item"></a>
             <a class="item"></a>
