--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <p>For when you need a friend with root access.</p>
                 </div>
             </a>
-            <a class="item" id="tictactoe" href="#" target="_blank">
+            <a class="item" id="tictactoe" href="/tictactoe/" target="_blank">
                 <div class="info">
                     <h1>Brutal Tic-Tac-Toe</h1>
                     <p>You're dreaming if you think you can even draw. Go on and give it a try!</p>
