--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -20,10 +20,10 @@
         </div>
 
         <div class="footer">
-                <script src = "/tictactoe/main.js"></script>
+                <script src = "/gRoot/tictactoe/main.js"></script>
             <button onclick = location.reload() id="btn">Reset</button>
         </div>
         
-        <link rel = "stylesheet" href="/tictactoe/main.css">
+        <link rel = "stylesheet" href="/gRoot/tictactoe/main.css">
     </body>
 </html>
