building landing page

--- a/file.html
+++ b/file.html
@@ -1,38 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Some interesting title</title>
-    <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
-
-<style>
-    body,html{
-        padding: 0;
-        margin:0;
-    }
-    #content{
-        text-align: center;
-        position: absolute;
-        top: 50%;
-        margin-top: -150px;
-        width: 100vw;
-    }
-    #image{
-        height: 200px;
-        width: 200px;
-        border: 1px solid black;
-        display: inline-block;
-    }
-    
-</style>
+	<title></title>
 </head>
 <body>
-    <div id="content">
-    <img id="img" src="#"/>
-    <input id="up" type="file" />
-
-        <input type="text" placeholder="Name"/>
-    </div>
+<input id="up" type="file" />
+<ul id="list">
+</ul>
 <script>
 	var jcrop_api;
 	var canvas;
