--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
                     <p>You're dreaming if you think you can even draw. Go on and give it a try!</p>
                 </div>
             </a>
-            <a class="item"></a>
+            <a class="item" id="rng" href="/gRoot/random_number_generator" target="_blank">
+                <div class="info">
+                    <h1>SDSLabs Random Number Generator</h1>
+                    <p>Say hello to one of the most random Random Number Generator! Packed with entropy of more than 90000, complete all your random desires with this little beast! </p>
+                </div>
+            </a>
             <a class="item"></a>
             <a class="item"></a>
         </div>
