--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
                     <p>Say hello to one of the most random Random Number Generator! Packed with entropy of more than 90000, complete all your random desires with this little beast! </p>
                 </div>
             </a>
-            <a class="item"></a>
+            <a class="item" id="baba" href="/gRoot/baba" target="_blank">
+                <div class="info">
+                    <h1>Get Rich Instantly!</h1>
+                    <p>Baba Ji Ki Jai Ho! </p>
+                </div>
+            </a>
             <a class="item"></a>
         </div>
     </div>
