--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
             </a>
             <a class="item" id="baba" href="/gRoot/baba" target="_blank">
                 <div class="info">
-                    <h1>Get Rich Instantly!</h1>
-                    <p>Baba Ji Ki Jai Ho! </p>
+                    <h1>Get Rich!</h1>
+                    <p>A guy from Roorkee did this simple trick and is now earning Rs. 1 crore a week. Click here to know how!</p>
                 </div>
             </a>
-            <a class="item"></a>
         </div>
     </div>
 </body>
