add footer + css fixes

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 </div>
             </a>
         </div>
+        <marquee class="footer">Made with hours of dedication and ❤️</marquee>
     </div>
 </body>
 </html>
