--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SDSLabs Annual Year 2018-19 Showcase</title>
+    <title>SDSLabs Academic Year 2018-19 Showcase</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link href="./style.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <div class="title">SDSLabs Annual Year 2018-19 Showcase</div>
+        <div class="title">SDSLabs Academic Year 2018-19 Showcase</div>
         <div class="content">
             <a class="item" id="gRoot" href="https://github.com/sdslabs/gRoot" target="_blank">
                 <div class="info">
