--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <p>Say hello to one of the most random Random Number Generator! Packed with entropy of more than 90000, complete all your random desires with this little beast! </p>
                 </div>
             </a>
-            <a class="item" id="baba" href="/gRoot/baba" target="_blank">
+            <a class="item" id="baba" href="/gRoot/richie_rich" target="_blank">
                 <div class="info">
                     <h1>Get Rich!</h1>
                     <p>A guy from Roorkee did this simple trick and is now earning Rs. 1 crore a week. Click here to know how!</p>
