--- a/april_fool.html
+++ b/april_fool.html
@@ -14,10 +14,9 @@
   <img src="load.gif" id="fabtopper_loader"></img>
 </div>
 	
-	<div class="comment">
-    	<p id="comments"></p>
-  	</div>
-  	<div id="welcomeDiv" style="display:none;">"Random number generated:<snap>42</snap>"</div>
+	  <div id="welcomeDiv" style="display:none;">Random number generated-</div>
+	  <div id="randomNo" style="display:none;">'404'</div>
+	<div id='quote'></div>
 	<button onclick="delay()" id="button">Click to generate a random number</button>
 	
 
